# LegacyLift

./: .gitignore  README.md  pyproject.toml  render.yaml
.data/: legacylift.db
.githooks/: post-checkout  post-merge
.github/workflows/: deploy.yml  sync-conduct-demo-script.yml
legacylift/: .env.example  .gitignore  Dockerfile  PIPELINE_DOCUMENTATION.md  README.md  RENDER_DEPLOY.md  requirements.txt  setup.bat
legacylift/api/: __init__.py  main.py  websocket_manager.py
legacylift/client/: .env.local.example  README.md  VENICE.md  middleware.ts  next.config.js  package-lock.json  package.json  setup.bat  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
legacylift/client/.claude/: launch.json
legacylift/core/: pipeline.py
legacylift/docs/: conduct_demo_script.config.json  conduct_demo_script.md  layer0_api_contract.md  target_profiles.md
legacylift/extension/: README.md  manifest.json  options.html  package-lock.json  package.json  tsconfig.json
legacylift/frontend/: README.md  setup.bat  tailwind.config.ts  tsconfig.json
legacylift/models/: __init__.py  business_rule.py  chunk.py  project.py  validation.py
legacylift/ownership/: classifier.py
legacylift/scripts/: install_git_hooks.bat  install_git_hooks.sh  sync_conduct_demo_script.py
legacylift/server/: .env.example  Dockerfile  __init__.py  azure-deploy.md  deploy.sh  fly.toml  legacylift_data.json  requirements.txt  setup.bat  smoke_test.py
legacylift/tests/: conftest.py  test_pipeline.py
legacylift/utils/: code_parser.py  llm_client.py  schema_parser.py
(+234 files in other folders)
