[project]
name = "legacylift"
version = "0.1.0"
description = "LegacyLift monorepo — uv tooling for server tests from the repository root"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0,<0.120.0",
    "uvicorn[standard]>=0.29.0,<0.35.0",
    "websockets>=12.0,<14.0",
    "python-multipart>=0.0.9,<0.1.0",
    "openai>=1.30.0,<2.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "aiofiles>=23.2.0,<25.0.0",
    "tree-sitter>=0.22.0,<0.24.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "greenlet>=3.0.0,<4.0.0",
    "alembic>=1.13.0,<2.0.0",
    "aiosqlite>=0.20.0,<0.21.0",
    "asyncpg>=0.29.0,<0.31.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pytest>=8.2.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<0.25.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "httpx>=0.27.0,<0.28.0",
    "PyJWT>=2.8.0,<3.0.0",
    "cryptography>=42.0.0,<44.0.0",
    "tenacity>=8.3.0,<9.0.0",
    "rich>=13.7.0,<14.0.0",
    "python-dateutil>=2.9.0,<3.0.0",
    "sqlparse>=0.5.0,<0.6.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["legacylift/server/tests"]
pythonpath = ["legacylift/server"]
